--- a/pom.xml
+++ b/pom.xml
@@ -177,6 +177,12 @@
             <version>1.14.12</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>5.2.3</version>
+        </dependency>
+
     </dependencies>
 
 </project>
