--- a/docker-compose.db.yml
+++ b/docker-compose.db.yml
@@ -12,6 +12,12 @@ services:
       POSTGRES_PASSWORD: postgres
     volumes:
       - pgdata:/var/lib/postgresql/data
+    networks:
+      - mynet
 
 volumes:
-  pgdata: 
+  pgdata:
+
+networks:
+  mynet:
+    external: true
