--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-# ─── docker-compose.yml ────────────────────────────────────────────────────────
 version: "3.8"
 
 services:
@@ -9,12 +8,18 @@ services:
     ports:
       - "8080:8080"
     environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://localhost:5432/vacancies
+      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/vacancies
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: postgres
       SPRING_JPA_HIBERNATE_DDL_AUTO: update
+    networks:
+      - mynet
     volumes:
       - m2-cache:/root/.m2
 
 volumes:
   m2-cache:
+
+networks:
+  mynet:
+    external: true
